--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -389,7 +389,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="menu-main-item">
+                    {{!-- <li class="menu-main-item">
                         <a class="menu-link" style="user-select: none" data-link="production"
                             onclick="$('.drop-down-menu-main-production').toggleClass('active');">
                             <i class="bi bi-bar-chart-fill me-3"></i>
@@ -432,9 +432,9 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> --}}
                     <li class="menu-main-item">
-                        <a href="/vitco-impex/vouchers/view" class="menu-link" data-link="vouchers">
+                        <a href="/vitco-impex/vouchers/choose-voucher" class="menu-link" data-link="vouchers">
                             <i class="bi bi-ticket-fill me-3"></i>
                             <div data-i18n="Basic">Vouchers</div>
                         </a>
