--- a/templates/views/admin/vouchers/selectVouchers.hbs
+++ b/templates/views/admin/vouchers/selectVouchers.hbs
@@ -78,12 +78,14 @@
                     <i class="bi bi-truck"></i>
                 </div>
                 <div class="voucher-body text-center w-100 pt-4">
-                    <a class="text-dark" href="/vitco-impex/vouchers/choose-voucher">
+                    <a class="text-dark" href="/vitco-impex/vouchers/delivery-order/view-all">
                         <h5 class="m-0">Delivery order</h5>
                     </a>
                     <span style="color:rgb(74, 74, 74);font-size: 12px;">Total Vouchers: 53</span> <br>
-                    <span style="font-size: 12px;"><a href="/vitco-impex/vouchers/delivery-order/new" class="mx-3">Create new </a><a href="" class="mx-3">View
-                            all </a></span>
+                    <span style="font-size: 12px;">
+                        <a href="/vitco-impex/vouchers/delivery-order/new" class="mx-3">Create new </a>
+                        <a href="/vitco-impex/vouchers/delivery-order/view-all" class="mx-3">View all </a>
+                    </span>
                 </div>
             </div>
         </div>
