--- a/templates/views/admin/vouchers/delivery-order/create-new.hbs
+++ b/templates/views/admin/vouchers/delivery-order/create-new.hbs
@@ -333,7 +333,9 @@
         <div class="submit-container d-flex justify-content-end ps-3 align-items-center"
             style="position: fixed;bottom:1em;right:1em;">
             <span class="error display-5 mx-3"></span>
-            <button style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;" class="btn bg-base-color text-light"
+            <button class="btn bg-base-color text-light mx-3 shadow-none" onclick="window.location.href ='/vitco-impex/vouchers/delivery-order/view-all'"
+                type="button"><i class="bi bi-view-stacked mx-1"></i>View all</button>
+            <button style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;" class="btn bg-base-color text-light shadow-none"
                 type="submit">Submit</button>
         </div>
     </form>
