--- a/public/css/admin/vouchers/delivery-order/view-all.css
+++ b/public/css/admin/vouchers/delivery-order/view-all.css
@@ -1,31 +1,30 @@
 /* ================================================================= */
 /* TABLE */
-table {
+.delivery-order-table table {
     border-collapse: collapse;
     margin: 0em 0;
-
     width: 100%;
     table-layout: fixed;
 }
 
-table caption {
+.delivery-order-table table caption {
     font-size: 1.5em;
     margin: .5em 0 .75em;
 }
 
-table tr {
+.delivery-order-table table tr {
     background-color: #ffffff;
     padding: .35em;
 }
 
-table th,
-table td {
+.delivery-order-table table th,
+.delivery-order-table table td {
 
     padding: 1em 0;
     text-align: center;
 }
 
-table th {
+.delivery-order-table table th {
     font-size: .85em;
     letter-spacing: .1em;
     text-transform: uppercase;
@@ -34,15 +33,15 @@ table th {
 }
 
 @media screen and (max-width: 600px) {
-    table {
+    .delivery-order-table table {
         border: 0;
     }
 
-    table caption {
+    .delivery-order-table table caption {
         font-size: 1.3em;
     }
 
-    table thead {
+    .delivery-order-table table thead {
         border: none;
         clip: rect(0 0 0 0);
         height: 1px;
@@ -53,20 +52,20 @@ table th {
         width: 1px;
     }
 
-    table tr {
+    .delivery-order-table table tr {
         border-bottom: 3px solid #ddd;
         display: block;
         margin-bottom: .625em;
     }
 
-    table td {
+    .delivery-order-table table td {
         border-bottom: 1px solid #ddd;
         display: block;
         font-size: .8em;
         text-align: right;
     }
 
-    table td::before {
+    .delivery-order-table table td::before {
         /*
           * aria-label has no advantage, it won't be read inside a table
           content: attr(aria-label);
@@ -77,9 +76,65 @@ table th {
         text-transform: uppercase;
     }
 
-    table td:last-child {
+    .delivery-order-table table td:last-child {
         border-bottom: 0;
     }
 }
 
 /* ============================================================================================================================= */
+
+.menu-link[data-link="vouchers"] {
+    background-color: #26ABE2;
+    color: #fff !important;
+}
+
+.tb-row {
+    cursor: pointer;
+}
+
+.tb-row:hover {
+    background-color: #f4f4f4;
+}
+
+.voucher-details-container {
+    height: 100vh;
+    width: 100.7%;
+    background-color: #fff;
+    position: absolute;
+    top: -5em;
+    left: -0.5em;
+    z-index: 999;
+    overflow-y: auto;
+}
+
+.page-title {
+    position: relative;
+    left: -1.2em;
+    top: 1em;
+    z-index: 11;
+    background-color: #fff;
+    box-shadow: 15px 4px 21px -3px rgba(0,0,0,0.1);
+    transition: all 0.1s ease-in-out;
+}
+
+.page-right-title{
+    position: absolute;
+    top: 0.5em;
+    right: 0;
+    z-index: 11;
+}
+.nav-link.active.bg-base-color-nav {
+    background-color: #26abe2 !important;
+}
+.view-details-divider {
+    background: #F7F9FB;
+    font-size: 0.9em;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+    border-top: 1px solid #dedfdf;
+}
