--- a/templates/views/admin/vouchers/selectVouchers.hbs
+++ b/templates/views/admin/vouchers/selectVouchers.hbs
@@ -81,7 +81,7 @@
                     <a class="text-dark" href="/vitco-impex/vouchers/delivery-order/view-all">
                         <h5 class="m-0">Delivery order</h5>
                     </a>
-                    <span style="color:rgb(74, 74, 74);font-size: 12px;">Total Vouchers: 53</span> <br>
+                    <span style="color:rgb(74, 74, 74);font-size: 12px;">Total Vouchers: {{DOvouchers}}</span> <br>
                     <span style="font-size: 12px;">
                         <a href="/vitco-impex/vouchers/delivery-order/new" class="mx-3">Create new </a>
                         <a href="/vitco-impex/vouchers/delivery-order/view-all" class="mx-3">View all </a>
