--- a/templates/views/admin/serviceReports/serviceReport.hbs
+++ b/templates/views/admin/serviceReports/serviceReport.hbs
@@ -1,7 +1,6 @@
 {{>adminHeader}}
 {{#> style}}
 <style>
-
   .menu-link[data-link="service-reports"] {
     background-color: #26ABE2;
     color: #fff !important;
@@ -89,7 +88,8 @@
   <div class="row">
     <div class="col-md-8 complaint-categories" style="overflow:auto;">
       <ul class="nav nav-pills d-flex flex-nowrap" id="pills-tab" role="tablist">
-        <li class="nav-item mx-2" role="presentation" onclick="totalSearchResults.addClass('hide');refreshAllReports()" data-filter="all">
+        <li class="nav-item mx-2" role="presentation" onclick="totalSearchResults.addClass('hide');refreshAllReports()"
+          data-filter="all">
           <button class="nav-link px-2 nav-link-all active rounded-0 d-block" id="pills-all-tab rounded-0"
             style="white-space: nowrap" data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab"
             aria-controls="pills-home" aria-selected="true" data-filter-value="All"> All
@@ -116,19 +116,17 @@
 
 {{!-- report table --}}
 <div class=" mb-5" style="width:100%;display:flex;justify-content:center;align-items:center" id="all-reports-header">
-  <table>
+  <table class="all-service-reports-table">
     <thead>
       <tr>
-        <th scope="col" class="user-select-none"
-          style="word-break:break-all;white-space: nowrap;border-radius:6px 0 0 0 ">S No.</th>
+        <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap;border-radius:6px 0 0 0 ">S No.</th>
         <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap;">Date</th>
         <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap;">C Name.</th>
         <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap">Mob.</th>
         <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap">Address</th>
         <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap">Machines</th>
         <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap">T. Name</th>
-        <th scope="col" class="user-select-none"
-          style="word-break:break-all;white-space: nowrap;border-radius: 0 6px 0 0 ">Atten. Loc</th>
+        <th scope="col" class="user-select-none" style="word-break:break-all;white-space: nowrap;border-radius: 0 6px 0 0 ">Atten. Loc</th>
       </tr>
     </thead>
     <tbody id="all-service-reports-body">
@@ -164,8 +162,7 @@
         <img src="/images/letters/alt.png" alt="" height="30em" width="53em" class="mx-2 d-lg-inline d-none">
         <i class="bi bi-plus-lg d-lg-inline d-none"></i>
         <img src="/images/letters/a.png" alt="" height="30em" width="30em" class="mx-2 d-lg-inline d-none">
-        <i class="bi bi-x-circle cursor-pointer" style="font-size:1.5em"
-          onclick="$('.view-sale-data-details-modal').addClass('hide');$('html').css('overflow-y', 'scroll');checkActiveFilter()"></i>
+        <i class="bi bi-x-circle cursor-pointer" style="font-size:1.5em" onclick="closeReport()"></i>
       </div>
     </div>
     <div class="row mt-2">
@@ -278,8 +275,7 @@
         {{/each}}
         <button class="btn text-light bg-base-color mx-3 shadow-none mt-3 print-service-report-btn"><i
             class="bi bi-printer-fill mr-2"></i>Print</button>
-        <button class="btn btn-secondary shadow-none mt-3"
-          onclick=" $('.view-sale-data-details-modal').addClass('hide');$('html').css('overflow-y', 'scroll');checkActiveFilter()">Close</button>
+        <button class="btn btn-secondary shadow-none mt-3" onclick="closeReport()">Close</button>
       </div>
     </div>
   </div>
@@ -360,7 +356,7 @@
           + add new
         </span>
       </div>
-      <div class="col-md-9 mb-5 pb-5 mt-3" style="position:relative" >
+      <div class="col-md-9 mb-5 pb-5 mt-3" style="position:relative">
         <span class="px-2" style="position:absolute;top:-0.7em;left:2em;background-color:#f8f9fa">Part IN</span>
         <div class="form-group d-flex p-3 pt-5" style="border: 1px solid rgb(194, 194, 194)!important;">
           <div class="w-100">
@@ -463,12 +459,11 @@
         })
       </script>
       <form id="advance-serach-form">
-
-        <div class="modal-body" style="overflow-y: auto;height: 12em;">
-          <h6>Search with combination</h6>
+        <div class="modal-body" style="overflow-y: auto;">
           <div class="container">
-            <div class="row">
+            <div class="row combination-adv-search-section" style="height: 7em;overflow:auto">
               <div class="col-12">
+                <h6>Filter With combination</h6>
                 <h6 style="font-size: 0.8em;" class="d-flex justify-content-between"><span> Select Fields</span>
                   <span>
                     <a class="text-danger mx-2 cursor-pointer user-select-none delete-advance-inputs-btn"
@@ -477,34 +472,53 @@
                       onclick="addNewAdvanceSearchInput('combination')">Add more</a></span>
                 </h6>
               </div>
-
-            </div>
-
-            <div class="row create-combination-container">
-              <div class="col-6">
-                <select class="form-select border-0" style="background-color: #f6f7f7;"
-                  aria-label="Default select example" name="adv-search-combination-select">
-                  <option value="date">Date</option>
-                  <option value="customerName">C. name</option>
-                  <option value="mobile">Mobile</option>
-                  <option value="address">C. Address</option>
-                  <option value="service.machineNum">Machine number</option>
-                  <option value="technicianName">Technician name</option>
-                  <option value="attendingLocation">Att. Location</option>
-                </select>
-              </div>
-              <div class="col-6 p-0">
-                <div class="form-group ">
-                  <input type="text" name="adv-search-input-query" class="form-control shadow-none"
-                    aria-describedby="helpId" placeholder="enter value" required>
+              <div class="create-combination-container d-flex flex-column">
+                <div class="d-flex">
+                  <div class="col-6">
+                    <select class="form-select border-0" style="background-color: #f6f7f7;"
+                      aria-label="Default select example" name="adv-search-combination-select"
+                      onclick="switchAdvance('combination')">
+                      <option value="date">Date</option>
+                      <option value="customerName">C. name</option>
+                      <option value="mobile">Mobile</option>
+                      <option value="address">C. Address</option>
+                      <option value="service.machineNum">Machine number</option>
+                      <option value="technicianName">Technician name</option>
+                      <option value="attendingLocation">Att. Location</option>
+                    </select>
+                  </div>
+                  <div class="col-6 p-0">
+                    <div class="form-group ">
+                      <input type="text" name="adv-search-input-query" class="form-control shadow-none"
+                        aria-describedby="helpId" placeholder="enter value" required
+                        onclick="switchAdvance('combination')" onkeyup="switchAdvance('combination')">
+                    </div>
+                  </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="opacity-3 wty-adv-search-section">
+            <h6 class="mb-2">Filter with warranty</h6>
+            <div class="form-check d-flex justify-content-between">
+              <div class="ps-3 user-select-none">
+                <input class="form-check-input bg-primary" value="IW" onchange="switchAdvance('warranty')" onclick="switchAdvance('warranty')" type="radio" name="advWty" id="advIW">
+                <label class="form-check-label" for="advIW">
+                  In warranty
+                </label>
+              </div>
+              <div class="pe-3 ps-md-0 ps-3 user-select-none">
+                <input class="form-check-input bg-primary" value="OW" onchange="switchAdvance('warranty')" onclick="switchAdvance('warranty')" type="radio" name="advWty" id="advOW">
+                <label class="form-check-label" for="advOW">
+                  Out of warranty
+                </label>
               </div>
             </div>
           </div>
         </div>
         <div class="modal-footer d-flex">
           <span class="totalResult mx-3"></span>
-          <button type="submit" class="btn text-light bg-base-color border-0 shadow-none ">Search</button>
+          <button type="submit" class="btn text-light bg-base-color border-0 shadow-none">Search</button>
         </div>
       </form>
     </div>
