--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -403,50 +403,6 @@
                             </li>
                         </ul>
                     </li>
-                    {{!-- <li class="menu-main-item">
-                        <a class="menu-link" style="user-select: none" data-link="production"
-                            onclick="$('.drop-down-menu-main-production').toggleClass('active');">
-                            <i class="bi bi-bar-chart-fill me-3"></i>
-                            <div data-i18n="Basic">Production</div>
-                            <i class="bi bi-arrow-down-short bi-arrow-down-short-dropdown ms-5 ps-2 display-6"></i>
-                        </a>
-                        <ul class="drop-down-menu-main-production">
-                            <li class="menu-main-item mt-2">
-                                <a href="/vitco-india/control/sales-report/all" class="menu-link menu-link-dropdown">
-                                    <i class="bi bi-shop-window me-3"></i>
-                                    <div data-i18n="Basic">Sales Orders</div>
-                                </a>
-                            </li>
-                            <li class="menu-main-item mt-2">
-                                <a href="/vitco-india/control/sales-report/add-new"
-                                    class="menu-link menu-link-dropdown">
-                                    <i class="bi bi-quote me-3"></i>
-                                    <div data-i18n="Basic">Make</div>
-                                </a>
-                            </li>
-                            <li class="menu-main-item mt-2">
-                                <a href="/vitco-india/control/sales-report/add-new"
-                                    class="menu-link menu-link-dropdown">
-                                    <i class="bi bi-bag-fill me-3"></i>
-                                    <div data-i18n="Basic">Purchase</div>
-                                </a>
-                            </li>
-                            <li class="menu-main-item mt-2">
-                                <a href="/vitco-india/control/sales-report/add-new"
-                                    class="menu-link menu-link-dropdown">
-                                    <i class="bi bi-box me-3"></i>
-                                    <div data-i18n="Basic">Stock</div>
-                                </a>
-                            </li>
-                            <li class="menu-main-item mt-2">
-                                <a href="/vitco-india/control/sales-report/add-new"
-                                    class="menu-link menu-link-dropdown">
-                                    <i class="bi bi-ticket-fill me-3"></i>
-                                    <div data-i18n="Basic">Items</div>
-                                </a>
-                            </li>
-                        </ul>
-                    </li> --}}
                     <li class="menu-main-item">
                         <a href="/vitco-impex/vouchers/choose-voucher" class="menu-link" data-link="vouchers">
                             <i class="bi bi-ticket-fill me-3"></i>
@@ -652,166 +608,6 @@
                     </li>
                     {{/ifCond}}
                     {{/ifCond}}
-                    {{!-- {{#ifCond this.permissionName 'machineSalesData'}}
-                    {{this.permissionName}}
-                    <li class="menu-main-item">
-                        <a class="menu-link d-flex justify-content-between" style="user-select: none"
-                            data-link="sales-data" onclick="$('.drop-down-menu-main-sales-data').toggleClass('active');
-                            $('.drop-down-menu-main-machine-sales-data').removeClass('active');
-                            $('.drop-down-menu-main-parts-sales-data').removeClass('active');">
-                            <div class="d-flex">
-                                <i class="bi bi-columns-gap me-3"></i>
-                                <div data-i18n="Basic" id="sales-data-navbar-item">Sales data</div>
-                            </div>
-                            <i class="bi bi-arrow-down-short bi-arrow-down-short-dropdown ms-5 ps-2 display-6"></i>
-                        </a>
-                        <ul class="drop-down-menu-main-sales-data">
-                            <li class="menu-main-item mt-2">
-                                <a class="menu-link menu-link-dropdown menu-two-link-dropdown d-flex justify-content-between"
-                                    onclick="$('.drop-down-menu-main-parts-sales-data').toggleClass('active')">
-                                    <div class="d-flex">
-                                        <i class="bi bi-cpu me-3"></i>
-                                        <div data-i18n="Basic">Machine</div>
-                                    </div>
-                                    <i class="bi bi-arrow-down-short me-1 display-6"></i>
-                                </a>
-                                <ul class="drop-down-menu-main-parts-sales-data">
-                                    {{#ifCond this.permissionKeys.0.keyName 'view'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/machine/all"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-eye-fill me-3"></i>
-                                            <div data-i18n="Basic">View all</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                    {{#ifCond this.permissionKeys.2.keyName 'create'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/machine/add-new"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-plus-lg me-3"></i>
-                                            <div data-i18n="Basic">Add new</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                </ul>
-                            </li>
-                            {{#each @root.admin.permissions}}
-                            {{#ifCond this.permissionName 'partSalesData'}}
-                            <li class="menu-main-item mt-2">
-                                <a class="menu-link menu-link-dropdown menu-two-link-dropdown d-flex justify-content-between"
-                                    onclick="$('.drop-down-menu-main-parts-sales-data').toggleClass('active')">
-                                    <div class="d-flex">
-                                        <i class="bi bi-cpu me-3"></i>
-                                        <div data-i18n="Basic">Parts</div>
-                                    </div>
-                                    <i class="bi bi-arrow-down-short me-1 display-6"></i>
-                                </a>
-                                <ul class="drop-down-menu-main-parts-sales-data">
-                                    {{#ifCond this.permissionKeys.0.keyName 'view'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/parts/all"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-eye-fill me-3"></i>
-                                            <div data-i18n="Basic">View all</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                    {{#ifCond this.permissionKeys.2.keyName 'create'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/parts/add-new"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-plus-lg me-3"></i>
-                                            <div data-i18n="Basic">Add new</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                </ul>
-                            </li>
-                            {{/ifCond}}
-                            {{/each}}
-                        </ul>
-                    </li>
-                    {{else}}
-                    <li class="menu-main-item">
-                        <a class="menu-link d-flex justify-content-between" style="user-select: none"
-                            data-link="sales-data" onclick="$('.drop-down-menu-main-sales-data').toggleClass('active');
-                            $('.drop-down-menu-main-machine-sales-data').removeClass('active');
-                            $('.drop-down-menu-main-parts-sales-data').removeClass('active');">
-                            <div class="d-flex">
-                                <i class="bi bi-columns-gap me-3"></i>
-                                <div data-i18n="Basic" id="sales-data-navbar-item">Sales data</div>
-                            </div>
-                            <i class="bi bi-arrow-down-short bi-arrow-down-short-dropdown ms-5 ps-2 display-6"></i>
-                        </a>
-                        <ul class="drop-down-menu-main-sales-data">
-                            <li class="menu-main-item mt-2">
-                                <a class="menu-link menu-link-dropdown menu-two-link-dropdown d-flex justify-content-between"
-                                    onclick="$('.drop-down-menu-main-parts-sales-data').toggleClass('active')">
-                                    <div class="d-flex">
-                                        <i class="bi bi-cpu me-3"></i>
-                                        <div data-i18n="Basic">Parts</div>
-                                    </div>
-                                    <i class="bi bi-arrow-down-short me-1 display-6"></i>
-                                </a>
-                                <ul class="drop-down-menu-main-parts-sales-data">
-                                    {{#ifCond this.permissionKeys.0.keyName 'view'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/parts/all"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-eye-fill me-3"></i>
-                                            <div data-i18n="Basic">View all</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                    {{#ifCond this.permissionKeys.2.keyName 'create'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/parts/add-new"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-plus-lg me-3"></i>
-                                            <div data-i18n="Basic">Add new</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                </ul>
-                            </li>
-                            {{#each @root.admin.permissions}}
-                            {{#ifCond this.permissionName 'partSalesData'}}
-                            <li class="menu-main-item mt-2">
-                                <a class="menu-link menu-link-dropdown menu-two-link-dropdown d-flex justify-content-between"
-                                    onclick="$('.drop-down-menu-main-parts-sales-data').toggleClass('active')">
-                                    <div class="d-flex">
-                                        <i class="bi bi-cpu me-3"></i>
-                                        <div data-i18n="Basic">Machine</div>
-                                    </div>
-                                    <i class="bi bi-arrow-down-short me-1 display-6"></i>
-                                </a>
-                                <ul class="drop-down-menu-main-parts-sales-data">
-                                    {{#ifCond this.permissionKeys.0.keyName 'view'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/machine/all"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-eye-fill me-3"></i>
-                                            <div data-i18n="Basic">View all</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                    {{#ifCond this.permissionKeys.2.keyName 'create'}}
-                                    <li class="menu-main-item mt-2">
-                                        <a href="/vitco-impex/control/sales-report/machine/add-new"
-                                            class="menu-link menu-link-dropdown">
-                                            <i class="bi bi-plus-lg me-3"></i>
-                                            <div data-i18n="Basic">Add new</div>
-                                        </a>
-                                    </li>
-                                    {{/ifCond}}
-                                </ul>
-                            </li>
-                            {{/ifCond}}
-                            {{/each}}
-                        </ul>
-                    </li>
-                    {{/ifCond}} --}}
                     {{#ifeq this.permissionName "serviceReport"}}
                     <li class="menu-main-item">
                         <a class="menu-link" style="user-select: none" data-link="service-reports"
@@ -842,9 +638,19 @@
                         </ul>
                     </li>
                     {{/ifeq}}
+                    {{#ifCond this.permissionName 'deliveryOrderVoucher'}}
+                    {{#ifeq this.permissionKeys.0.keyName "view"}}
+                    <li class="menu-main-item">
+                        <a href="/vitco-impex/vouchers/choose-voucher" class="menu-link" data-link="vouchers">
+                            <i class="bi bi-ticket-fill me-3"></i>
+                            <div data-i18n="Basic">Vouchers</div>
+                        </a>
+                    </li>
+                    {{/ifeq}}
+                    {{/ifCond}}
                     {{/each}}
                     <script>
-                        if($('.salesData').length > 0){
+                        if ($('.salesData').length > 0) {
                             $('.salesData')[1].remove()
                         }
                     </script>
