--- a/templates/views/admin/vouchers/delivery-order/view-all.hbs
+++ b/templates/views/admin/vouchers/delivery-order/view-all.hbs
@@ -46,7 +46,7 @@
                             Advance</th>
                         <th scope="col" class="user-select-none text-truncate"
                             style="word-break:break-all;white-space: nowrap;border-radius: 0 6px 0 0 ">
-                            Dispatched By</th>
+                            Due</th>
                     </tr>
                 </thead>
                 <tbody id="all-delivery-voucher-tbody">
@@ -261,7 +261,7 @@
 
             </div>
         </div>
-        <div class="row mb-5">
+        <div class="row" style="margin-bottom: 10em;">
             <h5 class="view-details-divider" style="background-color: #f7f8fa;">Dispatch
                 Details</h5>
 
