--- a/templates/views/admin/vouchers/delivery-order/create-new.hbs
+++ b/templates/views/admin/vouchers/delivery-order/create-new.hbs
@@ -110,54 +110,63 @@
         <div class="row">
             <div class="col-md-5">
                 <div class="form-group">
-                    <div class="mb-3">
+                    <div class="mb-3 mt-3">
                         <label for="orderDate">Order Date</label>
                         <div class="input-group date" data-date-format="dd/mm/yyyy">
-                            <input  autocomplete="off" required type="text" class="form-control" placeholder="dd/mm/yyyy" name="orderDate">
+                            <input autocomplete="off" required type="text" class="form-control" placeholder="dd/mm/yyyy"
+                                name="orderDate">
                             <div class="input-group-addon">
                                 <span class="glyphicon glyphicon-th"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="my-3">
+                    {{!-- <div class="my-3">
                         <label for="partyContactPerson">Receiver Name </label>
                         <div class="suggestionbox-container">
-                            <input  autocomplete="off" required type="text" class="form-control shadow-none" id="partyContactPerson"
-                                name="receiverName" placeholder="enter contact person name">
+                            <input autocomplete="off" required type="text" class="form-control shadow-none"
+                                id="partyContactPerson" name="receiverName" placeholder="enter contact person name">
 
                         </div>
-                    </div>
+                    </div> --}}
                     <div class="my-3">
                         <label for="partyName">Consignee</label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="partyName" name="consignee"
-                            placeholder="enter party name">
+                        <input autocomplete="off" required type="text" class="form-control shadow-none" id="partyName"
+                            name="consignee" placeholder="enter party name">
+                    </div>
+                    {{!-- <div class="my-3">
+                        <label for="address">Consignee Address</label>
+                        <textarea required style="resize: none;" type="text" rows="4" class="form-control shadow-none"
+                            name="consigneeAddress" id="address" placeholder="enter party address"></textarea>
+                    </div> --}}
+                </div>
+            </div>
+            <div class="col-md-5 offset-md-1">
+                <div class="form-group">
+                    {{!-- <label for="dispatchDate">Dispatch Date</label>
+                    <div class="mb-3 input-group date">
+                        <input autocomplete="off" type="text" class="form-control" placeholder="dd/mm/yyyy"
+                            name="dispatchDate">
+                        <div class="input-group-addon">
+                            <span class="glyphicon glyphicon-th"></span>
+                        </div>
+                    </div> --}}
+                    {{!-- <div class="my-3">
+                        <label for="representativePerson">Representative person </label>
+                        <input autocomplete="off" required type="text" class="form-control shadow-none"
+                            id="representativePerson" name="representativeName"
+                            placeholder="enter representative person">
+                    </div> --}}
+                    <div class="my-3" style="position: relative;">
+                        <label for="mobile">Consignee Mobile </label>
+                        <input autocomplete="off" style="padding-left: 40px;" required type="number"
+                            class="form-control shadow-none" id="mobile" name="consigneeMobile"
+                            placeholder="enter party mobile number">
+                        <span style="position:absolute;left:5px;bottom:6px;">+91</span>
                     </div>
                     <div class="my-3">
                         <label for="address">Consignee Address</label>
                         <textarea required style="resize: none;" type="text" rows="4" class="form-control shadow-none"
                             name="consigneeAddress" id="address" placeholder="enter party address"></textarea>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-5 offset-md-1">
-                <div class="form-group">
-                    <label for="dispatchDate">Dispatch Date</label>
-                    <div class="mb-3 input-group date">
-                        <input  autocomplete="off" type="text" class="form-control" placeholder="dd/mm/yyyy" name="dispatchDate">
-                        <div class="input-group-addon">
-                            <span class="glyphicon glyphicon-th"></span>
-                        </div>
-                    </div>
-                    <div class="my-3">
-                        <label for="representativePerson">Representative person </label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="representativePerson"
-                            name="representativeName" placeholder="enter representative person">
-                    </div>
-                    <div class="my-3" style="position: relative;">
-                        <label for="mobile">Consignee Mobile </label>
-                        <input  autocomplete="off" style="padding-left: 40px;" required type="number" class="form-control shadow-none" id="mobile" name="consigneeMobile"
-                            placeholder="enter party mobile number">
-                            <span style="position:absolute;left:5px;bottom:6px;">+91</span>
                     </div>
                 </div>
             </div>
@@ -168,28 +177,28 @@
                 <div class="form-group">
                     <div class="mb-3">
                         <label for="gstNum">GST IN NO.</label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="gstNum" name="gstInNum"
-                            placeholder="enter gst invoice number">
+                        <input autocomplete="off"  type="text" class="form-control shadow-none" id="gstNum"
+                            name="gstInNum" placeholder="enter gst invoice number">
                     </div>
-                    <div class="my-3">
-                        <label for="aadhaarNum">Aadhar no. </label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="aadhaarNum" name="aadharNum"
-                            placeholder="enter aadhaar number">
-                    </div>
+                    {{!-- <div class="my-3">
+                        <label for="aadhaarNum">PAN NO. / Aadhar no. </label>
+                        <input autocomplete="off" required type="text" class="form-control shadow-none" id="aadhaarNum"
+                            name="aadharNum" placeholder="enter aadhaar number">
+                    </div> --}}
                 </div>
             </div>
             <div class="col-md-5 offset-md-1">
                 <div class="form-group">
                     <div class="mb-3">
-                        <label for="panNum">PAN NO.</label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="panNum" name="panNum"
-                            placeholder="enter pan card number ">
+                        <label for="panNumORaadharNum">PAN NO. / Aadhar no. </label>
+                        <input autocomplete="off" type="text" class="form-control shadow-none" id="panNumORaadharNum"
+                            name="panNumORaadharNum" placeholder="enter pan card number ">
                     </div>
-                    <div class="my-3">
+                    {{!-- <div class="my-3">
                         <label for="specialIns">Special Instructions</label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="specialIns"
+                        <input autocomplete="off" required type="text" class="form-control shadow-none" id="specialIns"
                             name="specialInstructions" placeholder="enter special instruments">
-                    </div>
+                    </div> --}}
                 </div>
             </div>
         </div>
@@ -198,8 +207,9 @@
                 <thead>
                     <tr>
                         <th scope="col">Product Name</th>
-                        <th scope="col">Specification</th>
+                        <th scope="col">Serial No.</th>
                         <th scope="col">QTY</th>
+                        <th scope="col">Unit</th>
                         <th scope="col">Rate</th>
                         <th scope="col">Amount</th>
                         <th scope="col">GST@</th>
@@ -226,12 +236,11 @@
         </div>
         <hr>
         <div class="row">
-            <h4 class="mt-2 m-0 text-base-color">Advance Payment<input  autocomplete="off"
+            <h4 class="mt-2 m-0 text-base-color">Advance Payment<input autocomplete="off"
                     class="form-check-input ms-3 advanceDetailsCheckbox" type="checkbox" onchange="
                     if($(this).is(':checked')){
                         $('.advance-payment-container').removeClass('d-none');
-                        $('.advanceEntryTbody input').prop('required',true);
-                        $('.mode-of-advance-payment option:nth-child(1)').attr('value','null')
+                        $('.advanceEntryTbody input').not('.others-advance-input').prop('required',true);
                     }else{
                         $('.advance-payment-container').addClass('d-none');
                         $('.advanceEntryTbody input').prop('required',false);
@@ -239,7 +248,7 @@
                     }">
             </h4>
             <small class="mb-3">Check it for any advance payments</small>
-            <div class="col-md-5 advance-payment-container d-none">
+            {{!-- <div class="col-md-5 advance-payment-container d-none">
                 <select class="form-select shadow-none mode-of-advance-payment" aria-label="Default select example">
                     <option value="not selected" selected>Choose mode of payment</option>
                     <option value="bank">Bank</option>
@@ -250,7 +259,8 @@
                 <div class="mb-3">
                     <div class="form-group advance-upi-details mode-of-payment-details d-none">
                         <label for="utrNum">Enter UTR number</label>
-                        <input  autocomplete="off" type="text" class="form-control shadow-none" id="utrNum" placeholder="enter utr number">
+                        <input autocomplete="off" type="text" class="form-control shadow-none" id="utrNum"
+                            placeholder="enter utr number">
                     </div>
                 </div>
                 <div class="mb-3">
@@ -260,17 +270,19 @@
                             placeholder="describe your payment method"></textarea>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 advance-payment-container offset-md-1 d-none">
+            </div> --}}
+            <div class="col advance-payment-container d-none">
                 <table class="table">
                     <thead>
                         <tr>
+                            <th scope="col" style="word-break: keep-all;">Mode</th>
                             <th scope="col" style="word-break: keep-all;">Advance Date</th>
                             <th scope="col">Advance Amount</th>
                             <th scope="col" style="padding: 7px;"><i class="bi bi-plus-circle display-6 cursor-pointer"
                                     data-bs-toggle="tooltip" data-bs-placement="top" title="Add more"
                                     onclick="addMoreAdvInputs()"></i>
                             </th>
+                            <th scope="col" class="other-advance-head hide" style="word-break: keep-all;">Others</th>
                         </tr>
                     </thead>
                     <tbody class="advanceEntryTbody">
@@ -281,22 +293,20 @@
 
             </div>
         </div>
-        <hr>
+        {{!-- <hr>
         <div class="row">
             <h4 class="my-2 text-base-color">Dispatch Details</h4>
             <div class="col-md-5">
                 <div class="form-group">
-
-
                     <div class="my-3">
                         <label for="dispatchedBy">Dispatched By </label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="dispatchedBy"
-                            name="dispatchedBy" placeholder="who dispatched it ?">
+                        <input autocomplete="off" required type="text" class="form-control shadow-none"
+                            id="dispatchedBy" name="dispatchedBy" placeholder="who dispatched it ?">
                     </div>
                     <div class="my-3">
                         <label for="dispatchVehicleNum">Dispatch vehicle no. </label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="dispatchVehicleNum"
-                            name="dispatchVehicleNum" placeholder="enter vehicle number">
+                        <input autocomplete="off" required type="text" class="form-control shadow-none"
+                            id="dispatchVehicleNum" name="dispatchVehicleNum" placeholder="enter vehicle number">
                     </div>
                     <div class="my-3">
                         <label for="remark">Remark </label>
@@ -306,21 +316,21 @@
                 </div>
             </div>
             <div class="col-md-5 offset-md-1">
-                <div class="form-group">
+                <div class="form-group my-3">
                     <div class="my-3">
                         <label for="machineSrNum">Machine Serial No. </label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="machineSrNum"
-                            name="machineSrNum" placeholder="enter serial number">
+                        <input autocomplete="off" required type="text" class="form-control shadow-none"
+                            id="machineSrNum" name="machineSrNum" placeholder="enter serial number">
                     </div>
                     <div class="mb-3">
                         <label for="invoiceNum">Invoice No.</label>
-                        <input  autocomplete="off" required type="text" class="form-control shadow-none" id="invoiceNum" name="invoiceNum"
-                            placeholder="enter invoice number">
+                        <input autocomplete="off" required type="text" class="form-control shadow-none" id="invoiceNum"
+                            name="invoiceNum" placeholder="enter invoice number">
                     </div>
                     <div class="mb-3">
                         <label for="invoiceDate">Invoice Date</label>
                         <div class="input-group date" data-date-format="dd/mm/yyyy">
-                            <input  autocomplete="off" type="text" required class="form-control" placeholder="dd/mm/yyyy"
+                            <input autocomplete="off" type="text" required class="form-control" placeholder="dd/mm/yyyy"
                                 name="invoiceDate">
                             <div class="input-group-addon">
                                 <span class="glyphicon glyphicon-th"></span>
@@ -329,14 +339,15 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> --}}
         <div class="submit-container d-flex justify-content-end ps-3 align-items-center"
             style="position: fixed;bottom:1em;right:1em;">
             <span class="error display-5 mx-3"></span>
-            <button class="btn bg-base-color text-light mx-3 shadow-none" onclick="window.location.href ='/vitco-impex/vouchers/delivery-order/view-all'"
-                type="button"><i class="bi bi-view-stacked mx-1"></i>View all</button>
-            <button style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;" class="btn bg-base-color text-light shadow-none"
-                type="submit">Submit</button>
+            <button class="btn bg-base-color text-light mx-3 shadow-none"
+                onclick="window.location.href ='/vitco-impex/vouchers/delivery-order/view-all'" type="button"><i
+                    class="bi bi-view-stacked mx-1"></i>View all</button>
+            <button style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"
+                class="btn bg-base-color text-light shadow-none" type="submit">Submit</button>
         </div>
     </form>
 </div>
